--- a/MarvelApp/en.lproj/Localizable.strings
+++ b/MarvelApp/en.lproj/Localizable.strings
@@ -6,3 +6,11 @@
   
 */
 "Hola, Mundo!" = "Hello, World!";
+"Lista de Heroes" = "List of heroes";
+"Series" = "Series";
+"No tiene descripción" = "No description available";
+"Algo salio mal." = "Something went wrong.";
+"Por favor intentalo de nuevo." = "Please try again.";
+"Regresar" = "Go back";
+"OOOOPS!" = "OOOOPS!";
+"Cargando..." = "Loading...";
