--- a/MarvelApp/en.lproj/Localizable.strings
+++ b/MarvelApp/en.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 "Hola, Mundo!" = "Hello, World!";
-"Lista de Heroes" = "List of heroes";
+"Lista de Heroes" = "Heroes List";
 "Series" = "Series";
 "Algo salio mal." = "Something went wrong.";
 "Por favor intentalo de nuevo." = "Please try again.";
