Documentation added, tests fixed, localizable changed.

--- a/MarvelApp/en.lproj/Localizable.strings
+++ b/MarvelApp/en.lproj/Localizable.strings
@@ -13,3 +13,5 @@
 "Regresar" = "Go back";
 "OOOOPS!" = "OOOOPS!";
 "Cargando..." = "Loading...";
+"Filtrar Héroes." = "Filter Heroes.";
+"Usa este buscador para encontrar al héroe que buscas." = "Use this search bar to find the hero you're looking for.";
